# circleci-demo

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
src/calculator/: calculator.py
tests/: test_calculator.py
