[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "circleci-demo"
version = "0.1.0"
description = "A simple Python project to demonstrate CircleCI workflows"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

[project.scripts]
circleci-demo = "circleci_demo.cli:main"
